--- a/attendance/templates/timetable/timetable.html
+++ b/attendance/templates/timetable/timetable.html
@@ -48,11 +48,13 @@
                </div>
                <div
                     class="form-group col-12 d-flex flex-column flex-md-row justify-content-center justify-content-md-end">
-                    <input type="submit" class="btn border_white btn-cust neu_icon text-success align-self-center mr-2"
-                         value="Save & Continue">
+                    <a href="{% url 'timetable:setchoose' c_object.id %}"
+                         class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to choose set</a>
                     <a href="{% url 'timetable:showsubjects' c_object.id set_id %}"
                          class="btn border_white btn-cust neu_icon text-primary align-self-center mt-2 mt-md-0">Back to
                          Timetable</a>
+                    <input type="submit" class="btn border_white btn-cust neu_icon text-success align-self-center mr-2"
+                         value="Save & Continue">
                </div>
           </div>
      </form>
