--- a/attendance/templates/timetable/setchoose.html
+++ b/attendance/templates/timetable/setchoose.html
@@ -37,6 +37,8 @@
             class="btn border_white btn-cust neu_icon text-primary align-self-center mx-2 mb-3">Create&nbsp;Set</a>
     </div>
 </section>
+<a href="{% url 'classroom:editclass' c_object.id %}"
+                        class="ml-2 btn border_white btn-cust neu_icon text-primary align-self-center">Back to classroom info</a>  
 <section id="timetable-section" class="container"></section>
 
 <script>
