--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -91,7 +91,7 @@
 
 <section class="d-flex flex-column flex-md-row justify-content-center justify-content-md-between pl-md-4 pt-md-2 m-3">
     <a href="{% url 'timetable:setchoose' c_object.id %}"
-        class="btn border_white btn-cust neu_icon text-primary align-self-center ml-2">Back</a>
+        class="btn border_white btn-cust neu_icon text-primary align-self-center ml-2">Back to choosing set</a>
     <div class="d-flex flex-column flex-md-row">
         <button type="button"
             class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-3 my-2"
