Optimizing Code Data range + UI fixed a bug

--- a/attendance/templates/classroom/view_and_create_classroom.html
+++ b/attendance/templates/classroom/view_and_create_classroom.html
@@ -69,9 +69,9 @@
             Select all
         </label>
     </section>
-    <article class="row d-flex justify-content-center mt-md-4" id="selectable">
+    <article class="row mx-0 d-flex justify-content-center mt-md-4" id="selectable">
         {% for class,img in mylist %}
-        <section class="flip-card my-2 mx-4">
+        <section class="flip-card my-2 my-sm-3 my-md-4 mx-4">
             <div class="card cards border-0">
                 <div class="card-front" class-obj="{{ class }}" class-id="{{ class.id }}" id="front{{ class.id }}"
                     data-value="select">
