--- a/attendance/templates/user_module/my_account.html
+++ b/attendance/templates/user_module/my_account.html
@@ -37,9 +37,9 @@
                 {{ form.email|as_crispy_field }}
             </div>
             <div class="form-group col-md-12">
-                <a href="{% url 'password_reset' %}" type="button"
+                <a href="{% url 'password_change' %}" type="button"
                     class="btn border_white btn-cust neu_icon text-primary align-self-center float-left">
-                    Reset&nbsp;Password
+                    Change&nbsp;Password
                 </a>
                 <button type="submit" form="account_update_form"
                     class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-md-3">Update</button>
