+ merged subject & hour creation using formset + django-formset for hour (subject urls and templates needs to be removed)

--- a/attendance/templates/classroom/edit_classroom.html
+++ b/attendance/templates/classroom/edit_classroom.html
@@ -16,6 +16,7 @@
     </div>
     <div class="card-footer">
         <a href="{% url 'classroom:manage_students' get_obj.id %}" class="btn btn-primary">Manage Students</a>
+        <a href="{% url 'subject:hour_list' get_obj.id %}" class="btn btn-primary">Manage Hour</a>
         <button type="button" data-toggle="modal" data-target="#edit-modal" data-backdrop="static"
             class="btn btn-info float-right mx-2">Edit</button>
         <a href="{% url 'classroom:createclass' %}" class="btn btn-secondary float-right">Back</a>
