--- a/attendance/templates/timetable/showsubjects.html
+++ b/attendance/templates/timetable/showsubjects.html
@@ -93,6 +93,7 @@
     <a href="{% url 'timetable:setchoose' c_object.id %}"
         class="btn border_white btn-cust neu_icon text-primary align-self-center ml-2">Back to choosing set</a>
     <div class="d-flex flex-column flex-md-row">
+        <a href="#" class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-3 my-2">Auto Generate</a>
         <button type="button"
             class="btn border_white btn-cust neu_icon text-success align-self-center float-right mr-3 my-2"
             id="save-changes">Save&nbsp;changes</button>
