--- a/attendance/templates/subject/HourAddStudent.html
+++ b/attendance/templates/subject/HourAddStudent.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+{% block title %}
+<title>SAMS | Subject | Add Students</title>
+{% endblock %}
+
 {% block content %}
 
 <section class="container">
