--- a/attendance/templates/subject/HourEdit.html
+++ b/attendance/templates/subject/HourEdit.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+<title>SAMS | Subject Edit List</title>
+{% endblock %}
+
 {% block head %}
 
 <script src="{% static 'formset_bootstrap/js/jquery.formset.js' %}" type="text/javascript"></script>
@@ -13,13 +17,13 @@
 <section class="container">
 	<h2 class="text-center">Edit Hour</h2>
 
-	<form method="POST" >
+	<form method="POST">
 		{% csrf_token %}
 		{{ formset.management_form }}
 		{% for f in formset %}
-			<div id="{{ f.prefix }}-row" class="formset_i">
-				{{ f|crispy }}
-			</div>
+		<div id="{{ f.prefix }}-row" class="formset_i">
+			{{ f|crispy }}
+		</div>
 		{% endfor %}
 
 		<input type="submit" value="Save" class="btn btn-success">
@@ -28,11 +32,11 @@
 </section>
 
 <script type="text/javascript">
-    $(document).ready(function () {
-        $('.formset_i').formset({
-        	prefix: "{{ formset.prefix }}",
-        });
-    });
+	$(document).ready(function () {
+		$('.formset_i').formset({
+			prefix: "{{ formset.prefix }}",
+		});
+	});
 </script>
 
 {% endblock %}
