--- a/attendance/templates/subject/create_hour.html
+++ b/attendance/templates/subject/create_hour.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+<title>SAMS | Create Hour & its Subject</title>
+{% endblock %}
+
 {% block head %}
 
 <script src="{% static 'formset_bootstrap/js/jquery.formset.js' %}" type="text/javascript"></script>
@@ -10,29 +14,56 @@
 
 {% block content %}
 
-<section class="container">
-	<h2 class="text-center">Create Hour</h2>
-
+<section class="container px-md-4 pb-4 body_box_shadow border_white mx-md-3">
+	<div class="text-center text_d_blue arvo my-4">
+		<h3 class="m-0">Create&nbsp;Hour&nbsp;& Subject Form</h3>
+	</div>
 	<form class="container" method="POST" novalidate>
-		{{ form|crispy }}
+		<section class="form-row">
+			<div class="form-group col-md-12 text_d_blue arvo upper_case">Hour Details&nbsp;:</div>
+			<div class="form-group col-md-6 pr-md-2">
+				{{ form.name|as_crispy_field }}
+			</div>
+			<div class="form-group col-md-6 pl-md-2">
+				{{ form.hour_type|as_crispy_field }}
+			</div>
+		</section>
 		{% csrf_token %}
 		{{ formset.management_form }}
 		{% for f in formset %}
-			<section id="{{ f.prefix }}-row" class="formset_i">
-				{{ f|crispy}}
-			</section>
+		<section id="{{ f.prefix }}-row" class="formset_i form-row">
+			<div class="form-group col-md-12 text_d_blue arvo upper_case">Subject Details&nbsp;:</div>
+			<div class="form-group col-md-6 pr-md-2">
+				{{ f.sub_name|as_crispy_field }}
+			</div>
+			<div class="form-group col-md-6 pl-md-2">
+				{{ f.handled_by|as_crispy_field }}
+			</div>
+		</section>
 		{% endfor %}
-
-		<input type="submit" name="submit" class="btn btn-info">
+		<button class="btn border_white btn-cust neu_icon text-success align-self-center" type="submit">
+			Submit
+		</button>
 	</form>
 </section>
 
 <script type="text/javascript">
-    $(function () {
-        $('.formset_i').formset({
-        	prefix: "{{ formset.prefix }}",
-        });
-    });
+	$(function () {
+		$('.formset_i').formset({
+			prefix: "{{ formset.prefix }}",
+		});
+	});
+
+	$(document).ready(function () {
+		$('[data-toggle="tooltip"]').tooltip();
+
+		$(".add-row").addClass("btn border_white btn-cust neu_icon text-primary align-self-center capitalize");
+		$(".delete-row").addClass("btn border_white btn-cust neu_icon text-danger align-self-center mb-5 capitalize")
+
+		$(".add-row").on('click', function () {
+			$(".delete-row").addClass("btn border_white btn-cust neu_icon text-danger align-self-center mb-5 capitalize")
+		});
+	});
 </script>
 
 {% endblock %}
