--- a/attendance/templates/subject/create_hour.html
+++ b/attendance/templates/subject/create_hour.html
@@ -18,7 +18,7 @@
 	<div class="text-center text_d_blue arvo my-4">
 		<h3 class="m-0">Create&nbsp;Hour&nbsp;& Subject Form</h3>
 	</div>
-	<form class="container" method="POST" novalidate>
+	<form class="container form needs-validation" method="POST" novalidate>
 		<section class="form-row">
 			<div class="form-group col-md-12 text_d_blue arvo upper_case">Hour Details&nbsp;:</div>
 			<div class="form-group col-md-6 pr-md-2">
