--- a/attendance/templates/attendancess/check_attendance.html
+++ b/attendance/templates/attendancess/check_attendance.html
@@ -27,7 +27,12 @@
         Subject :
     </h5>
     <h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
-        {{ attendance_id.subject.sub_name }}
+        {{ attendance_id.subject.sub_name }} ({{ hour.hour.name|upper }})
+    </h5>
+</section>
+<section class="ml-4 pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        Hour : {{ hour_number }}
     </h5>
 </section>
 <section class="container px-0 px-md-5 mx-auto d-flex d-md-block justify-content-center">
@@ -60,7 +65,7 @@
                 {% endfor %}
                 {% else %}
                 <tr scope="row" class="text-center text_d_blue">
-
+                    No Student Entry
                 </tr>
                 {% endif %}
             </tbody>
