Attendance Bug fixed

--- a/attendance/templates/base.html
+++ b/attendance/templates/base.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="list-group">
-              <a href="#" class="side_bar_link fill_d_blue">
+              <a href="{% url 'dashboard:view' %}" class="side_bar_link fill_d_blue">
                 <!-- dashboard logo 1 -->
                 <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" class="mr-2 d-"
                   xmlns="http://www.w3.org/2000/svg">
